# Cornstarch

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  tmp_test.py
cornstarch/: __init__.py  pipeline_template.py
cornstarch/kernel/: attention.py  bitfield_attention.py  interface.py  naive_attn.py
cornstarch/kernel/cache/: __init__.py  cache_manager.py
cornstarch/kernel/triton/: any_mask_attn.py  attn.py  casual_mask_attn.py
cornstarch/models/: __init__.py
cornstarch/models/evaclip/: modeling_evaclip.py
cornstarch/models/intern_vit/: configuration_intern_vit.py  modeling_intern_vit.py
cornstarch/models/internlm/: __init__.py  modeling_internlm2.py  tokenization_internlm2_fast.py
cornstarch/models/internlm2/: __init__.py  configuration_internlm2.py  modeling_internlm2.py  tokenization_internlm2.py  tokenization_internlm2_fast.py  tokenizer_config.json
cornstarch/models/internvl2/: configuration_internvl_chat.py  conversation.py  modeling_internvl_chat.py
cornstarch/plugin/: __init__.py
cornstarch/shardformer/layers/: _base.py  (+8 more)
cornstarch/testing/: .gitignore  dcgm.py  model_zoo.py  profile_4d_parallel.py  profile_context_parallel.py  profile_fsdp.py  profile_layer.py  profile_layer_result.csv  profile_pipeline_parallel.py  timer.py  utils.py
docs/: index.md
docs/getting_started/: installation.md
docs/parallelization/: cornstarch_parallel.md  ddp_fsdp.md  index.md
docs/using_cornstarch/: creating_mllm.md  preprocessing_inputs.md  training_mllm.md
examples/: README.md  commons.py  fake_dataset.py  pretrain_valm.py  pretrain_vlm.py  pretrain_vlm_lora.py  run_bert.py  run_gpt2.py  run_llama.py  run_mixtral.py  run_vit.py
examples/distributed/: run_llm_hybrid.py  run_llm_ring.py  run_vlm_ddp.py  run_vlm_fsdp.py  run_vlm_hybrid.py
examples/multimodal_language_model/: pretrain_clip_gemma.py  pretrain_clip_llama_3.py  pretrain_clip_phi3.py  pretrain_evaclip_gemma.py  pretrain_evaclip_gemma_fsdp.py  pretrain_internvit_gemma.py  tensorboard_util.py
examples/pipeline_template/: data_builder.py  run_bert.py  run_gpt2.py  run_llama.py  run_vit.py
oobleck_colossalai/: __init__.py  pipeline_template.py  process_group_mesh.py  stage_manager.py
oobleck_colossalai/module_info/: auto_module.py  bert.py  bloom.py  gpt2.py  llama.py  opt.py  t5.py  vit.py
oobleck_colossalai/plugin/: heterogeneous_dataloader.py  heterogeneous_parallel_module.py  heterogeneous_parallel_plugin.py
oobleck_colossalai/shardformer/: pipeline_template_policy.py
pipeline_template/: pipeline_template.py  process_group_mesh.py  stage_manager.py
pipeline_template/plugin/: heterogeneous_parallel_module.py  heterogeneous_parallel_plugin.py  model_parallel_module.py
pipeline_template/shardformer/: pipeline_template_policy.py
tests/: data_builder.py  distributed_base.py  gloo_utils.py  test_auto_module.py  test_heterogeneous_parallel_plugin.py  test_pipeline_template.py  test_placeholder.py  test_process_group_mesh.py  test_stage_manager.py
tests/shardformer/: _utils.py  conftest.py  test_clip.py  test_dinov2.py  test_mistral.py  test_mixtral.py
tests/test_kernel/: test_attention.py  test_attn.py  test_bitfield_attention.py  test_flexattn.py
tests/test_layers/: test_attn.py
tests/test_models/: test_multimodal_attention.py  test_multimodal_from_pretrained.py  test_multimodal_language_model.py  test_multimodal_merge_outputs.py  test_multimodal_processor.py  test_processing_multimodal_language_model.py
tests/test_plugins/: common.py
tests/test_shardformer/: _utils.py  clip.py  conftest.py  dinov2.py  evaclip.py  gemma.py  gemma2.py  intern_vit.py  internlm2.py  llama.py  mistral.py  mixtral.py  phi3.py  qwen2.py  qwen2_audio.py  siglip.py  test_clip.py  test_context_parallel.py  test_dinov2.py  test_encoders_colocated.py  test_encoders_replicated.py  test_evaclip.py  test_gemma.py  test_gemma2.py  test_hybrid_parallel.py  test_intern_vit.py  test_llama.py  test_lnternlm.py  test_lnternlm2.py  test_mistral.py  test_mixtral.py  test_multimodal.py  test_multimodal_backup.py  test_multimodal_parallel.py  test_multimodal_sequential.py  test_phi3.py  test_qwen2.py  test_qwen2_audio.py  test_ring_attn_org.py  test_siglip.py  (+5 more)
tests/test_utils/: test_generation.py  test_pretrained_llava_conversion.py  test_pretrained_projection.py
tests/tmp_test/: tmp_test_anymask_llama.py  train_llama_ring_attn.py
(+175 files in other folders)
